--- a/templates/moon_waves_details.html
+++ b/templates/moon_waves_details.html
@@ -91,7 +91,7 @@
                     <p class="tax-price">
                         Located in Varkala, a 3-minute walk from Varkala Beach, Moon Waves Beach Resort provides accommodations with a terrace, free private parking, and a restaurant. <br> The property is around 46.7 km from Sree Padmanabhaswamy Temple, 46.7 km from Napier Museum, and a 16-minute walk from Janardhana swamy Temple. <br> The property has a 24-hour front desk, airport transportation, room service, and free WIFI. At the resort, every room has a desk. With a private bathroom equipped with a shower and free toiletries, <br> certain Moon Waves Beach Resort units also provide guests with a patio.                    </p> <br>
 
-                    <span>Room Types</span><br>
+                        <span class="txt_roomtype">Room Types</span><br>
                         <div class="list_div">
                             <li>Standard NON AC  --  Room With Free Cancellation ( No meals included )</li>
                             <li>deluxe  AC  --  Room With Free Cancellation ( No meals included )</li>
@@ -107,6 +107,91 @@
                             <li>Pets are not allowed.</li>
                         </div><br><br>
 
+                        <div class="room_main">
+                            <!--hotel-room 1-->
+        
+                                <div class="room_card">
+                                    <img src="{% static 'image/property_img/cliff_a-c deluxe room.jpg' %}" alt="Swimming pool" class="room_card-image">
+                                    <div class="room_card-content">
+                                        <h2>Deluxe AC Room - with Balcony </h2>
+                                        <ul class="room_details">
+                                            <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                            <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                            <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                            <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                            <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                            <!-- <li><img src="{% static 'image/icon_png/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                        </ul>
+                                    </div>
+                                </div> 
+                                
+                            <!--hotel-room-2-->
+        
+                                <div class="room_card">
+                                    <img src="{% static 'image/property_img/cliff non a-c.jpg' %}" alt="Swimming pool" class="room_card-image">
+                                    <div class="room_card-content">
+                                        <h2>Standard Non AC Room</h2>
+                                        <ul class="room_details">
+                                            <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;">  Twin Bed </li>
+                                            <!-- <li><img src="{% static 'image/property_img/wave.png' %}" alt="" style="height: 20px; width: 20px;"> Sea View </li> -->
+                                            <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                            <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                            <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                        </ul>
+                                    </div>
+                                </div> 
+                                <!-- hotel-room-3 -->
+    
+                                <div class="room_card">
+                                    <img src="{% static 'image/property_img/cliff_a-c deluxe room.jpg' %}" alt="Swimming pool" class="room_card-image">
+                                    <div class="room_card-content">
+                                        <h2>4 Bed Non AC Room - with Balcony </h2>
+                                        <ul class="room_details">
+                                            <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                            <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                            <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                            <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                            <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                            <!-- <li><img src="{% static 'image/icon_png/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                        </ul>
+                                    </div>
+                                </div> 
+    
+                                <!-- ḥotel-room-4 -->
+    
+                                <div class="room_card">
+                                    <img src="{% static 'image/property_img/cliff_a-c deluxe room.jpg' %}" alt="Swimming pool" class="room_card-image">
+                                    <div class="room_card-content">
+                                        <h2>Wood House AC - with Balcony </h2>
+                                        <ul class="room_details">
+                                            <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                            <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                            <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                            <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                            <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                            <!-- <li><img src="{% static 'image/icon_png/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                        </ul>
+                                    </div>
+                                </div> 
+
+                                <!-- room-5 -->
+                                <div class="room_card">
+                                    <img src="{% static 'image/property_img/cliff_a-c deluxe room.jpg' %}" alt="Swimming pool" class="room_card-image">
+                                    <div class="room_card-content">
+                                        <h2>6 Bed Dorm AC  </h2>
+                                        <ul class="room_details">
+                                            <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                            <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                            <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                            <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                            <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                            <!-- <li><img src="{% static 'image/icon_png/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                        </ul>
+                                    </div>
+                                </div> 
+                        </div>
+
+
 
                         <h1 class="Location">Hotel-images</h1>
                         <div class="hotel-gallery" id="gallery">
@@ -114,7 +199,7 @@
                                 <div class="gallery_img">
                                     <img src="{% static 'image/property_img/moon_waves_1.jpg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/moon_waves_1.jpg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/moon_waves_1.jpg ' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -122,7 +207,7 @@
                                 <div class="gallery_img">
                                     <img src="{% static 'image/property_img/moonwaves_7.jpeg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/moonwaves_7.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/moonwaves_7.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
