--- a/templates/nisara_details.html
+++ b/templates/nisara_details.html
@@ -93,7 +93,7 @@
                         Cliff County is a sustainable homestay in Varkala, a 3-minute walk from Varkala Beach. This property encourages guests to <br> embrace nature with its eco-friendly arrangements. This homestay features free private parking, a 24-hour front desk, and free Wifi. <br> The accommodation provides airport transfers, while a bicycle rental service is also available. Each room has a private bathroom with a shower and free toiletries, <br> while some rooms include a balcony.A car rental service is available at Cliff County. Popular points of interest near the accommodation include <br> Odayam Beach, Aaliyirakkm Beach, and Varkala Cliff,Black Sand Beach, Kappil Beach. The nearest airport is Thiruvananthapuram International Airport, 25 miles from Cliff County.
                     </p> <br>
 
-                    <span>Room Types</span><br>
+                    <span class="txt_roomtype">Room Types</span><br>
                         <div class="list_div">
                             <li>Standard NON AC  --  Room Only</li>
                             <li>deluxe  AC  --  Room Only</li>
@@ -105,13 +105,38 @@
                         </div><br><br>
 
 
+                        <div class="room_main">
+                            <!--hotel-room 1-->
+        
+                                <div class="room_card">
+                                    <img src="{% static 'image/property_img/nisara_room1.jpeg' %}" alt="Swimming pool" class="room_card-image">
+                                    <div class="room_card-content">
+                                        <h2>Nisara Homestay </h2>
+                                        <ul class="room_details">
+                                            <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> 3x Double Bed</li>
+                                            <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                            <li><img src="{% static 'image/property_img/kitchen.png' %}" alt="" style="height: 20px; width: 20px;"> 1 x Kitchen </li>
+                                            <li><img src="{% static 'image/property_img/public-toilet.png' %}" alt="" style="height: 20px; width: 20px;"> 2 x Bathroom </li>
+                                            <li><img src="{% static 'image/property_img/bedroom.png' %}" alt="" style="height: 20px; width: 20px;"> 3 x Bedroom </li>
+                                            <!-- <li><img src="{% static 'image/icon_png/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li> -->
+                                            <!-- <li><img src="{% static 'image/icon_png/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                        </ul>
+                                    </div>
+                                </div> 
+                                
+                            <!--hotel-room-2-->
+        
+                       
+                        </div>
+
+
                         <h1 class="Location">Hotel-images</h1>
                         <div class="hotel-gallery" id="gallery">
                             <div class="gallery_item">
                                 <div class="gallery_img">
                                     <img src="{% static 'image/property_img/nisara_homestay_1.jpeg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/nisara_homestay_1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/nisara_homestay_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -119,7 +144,7 @@
                                 <div class="gallery_img">
                                     <img src="{% static 'image/property_img/nisara_out1.jpeg' %}" alt="">
                                     <div class="hover">
-                                        <a class="light" href="{% static 'image/property_img/nisara_out1.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                        <a class="light" href="{% static 'image/property_img/nisara_out1.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                     </div>
                                 </div>
                             </div>
