--- a/templates/skyframe_details.html
+++ b/templates/skyframe_details.html
@@ -72,7 +72,7 @@
                 <div class="container-hotel-info">
                     <div class="header">
                         <h1>Skyframe Beach Resort <span></span></h1>
-                        <p>Aaliyirakkam Beach, Varkala | 2.0 km drive to Varkala Beach</p>
+                        <p>Aaliyirakkam Beach, Varkala | 3.0 km drive to Varkala Beach</p>
                     </div>
                     <br><br>
                     <div class="gallery">
@@ -94,7 +94,7 @@
                     </p> <br>
 
 
-                    <span>Room Types</span><br>
+                    <span class="txt_roomtype">Room Types</span><br>
                     <div class="list_div">
                         <li>Executive Room  -- -- Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
                         <li>AC deluxe double room --  --  Room With Free Cancellation  &  Room with With Free Cancellation (Breakfast only)</li>
@@ -111,7 +111,85 @@
     
                         <li>Passport, Aadhar, Govt. ID and Driving License are accepted as ID proof(s)</li>
                         <li>Pets are not allowed.</li>
+                        <li>Unmarried couples are not allowed</li>
                     </div><br><br>
+
+                    <div class="room_main">
+                        <!--hotel-room 1-->
+    
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/skyframe_room3.jpg' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>Deluxe AC Double Room - with Balcony </h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                        <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                        <!-- <li><img src="{% static 'image/property_img/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                    </ul>
+                                </div>
+                            </div> 
+                            
+                        <!--hotel-room-2-->
+    
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/sky_frame_executive.png' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>Executive Room</h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;">  Twin Bed </li>
+                                        <!-- <li><img src="{% static 'image/property_img/wave.png' %}" alt="" style="height: 20px; width: 20px;"> Sea View </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                    </ul>
+                                </div>
+                            </div> 
+
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/skyframe_sea_view_deluxe.png' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>AC Sea View Deluxe Double Room</h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;">  Twin Bed </li>
+                                        <!-- <li><img src="{% static 'image/property_img/wave.png' %}" alt="" style="height: 20px; width: 20px;"> Sea View </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                    </ul>
+                                </div>
+                            </div> 
+
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/skyframe_resort.jpg' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>Premium AC  room with Sea View</h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;">  Twin Bed </li>
+                                        <!-- <li><img src="{% static 'image/property_img/wave.png' %}" alt="" style="height: 20px; width: 20px;"> Sea View </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                    </ul>
+                                </div>
+                            </div> 
+
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/skyframe_sea_view_deluxe.png' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>Suite with Sea View</h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;">  Twin Bed </li>
+                                        <!-- <li><img src="{% static 'image/property_img/wave.png' %}" alt="" style="height: 20px; width: 20px;"> Sea View </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                    </ul>
+                                </div>
+                            </div> 
+                    </div>
 
                     <h1 class="Location">Hotel-images</h1>
                     <div class="hotel-gallery" id="gallery">
@@ -119,7 +197,7 @@
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/skyframe_room2.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/skyframe_room2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/skyframe_room2.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -127,7 +205,7 @@
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/skyframe_resort.jpg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/skyframe_resort.jpg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/skyframe_resort.jpg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
