--- a/templates/villa_skyframe_details.html
+++ b/templates/villa_skyframe_details.html
@@ -98,7 +98,7 @@
                         The property provides a variety of Ayurveda packages to heal your body. <br>
                     </p> <br>
 
-                    <span>Room Types</span><br>
+                    <span class="txt_roomtype">Room Types</span><br>
                     <div class="list_div">
                         <li>Non AC Room  --  Room Only  &  Room with Breakfast available</li>
                         
@@ -112,13 +112,48 @@
                         <li>Pets are not allowed.</li>
                     </div><br><br>
 
+
+                    <div class="room_main">
+                        <!--hotel-room 1-->
+    
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/villasky_room5.jpeg' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>Non AC Room  </h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                        <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                        <!-- <li><img src="{% static 'image/property_img/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                    </ul>
+                                </div>
+                            </div> 
+
+                            <div class="room_card">
+                                <img src="{% static 'image/property_img/villa-skyframe_room1.jpeg' %}" alt="Swimming pool" class="room_card-image">
+                                <div class="room_card-content">
+                                    <h2>AC Room  </h2>
+                                    <ul class="room_details">
+                                        <li><img src="{% static 'image/property_img/bed-alt.png' %}" alt="" style="height: 20px; width: 20px;"> Double Bed</li>
+                                        <!-- <li><img src="{% static 'image/property_img/trillium.png' %}" alt="" style="height: 20px; width: 20px;"> Garden View  </li> -->
+                                        <li><img src="{% static 'image/property_img/Desk.png' %}" alt="" style="height: 20px; width: 20px;"> Work Desk </li>
+                                        <li><img src="{% static 'image/property_img/wifi.png' %}" alt="" style="height: 20px; width: 20px;"> Wi-Fi </li>
+                                        <li><img src="{% static 'image/property_img/water-bottle.png' %}" alt="" style="height: 20px; width: 20px;"> Complimentar water bottle </li>
+                                        <!-- <li><img src="{% static 'image/property_img/ban.png' %}" alt="" style="height: 20px; width: 20px;"> Non-Refundable</li> -->
+                                    </ul>
+                                </div>
+                            </div> 
+                            
+                    </div>
                     <h1 class="Location">Hotel-images</h1>
                     <div class="hotel-gallery" id="gallery">
                         <div class="gallery_item">
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/villa_skyframe_1.jpg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/villa_skyframe_1.jpg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/eva_beach_1.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -126,7 +161,7 @@
                             <div class="gallery_img">
                                 <img src="{% static 'image/property_img/villaskyframe_2.jpeg' %}" alt="">
                                 <div class="hover">
-                                    <a class="light" href="{% static 'image/property_img/villaskyframe_2.jpeg' %}"><i class="fa fa-expand"></i></a>
+                                    <a class="light" href="{% static 'image/property_img/cliffcounty-dtls.jpeg ' %}"><i class="fa fa-expand"></i></a>
                                 </div>
                             </div>
                         </div>
