--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4171,11 +4171,15 @@ body {
 }
 
 .hotel-details .amenities span {
+  font-family: system-ui;
+  font-weight: bold;
+  color: black;
+  margin-left: 5px;
+  margin-top: 5px;
   display: inline-block;
   background-color: #eee;
   padding: 5px;
   margin-right: 5px;
-  margin-top: 5px;
   border-radius: 3px;
   font-size: 12px;
 }
@@ -4317,39 +4321,42 @@ img.logo-img {
   font-weight: 700;
   width: fit-content;
   text-align: center;
-
 }
 .list_div li{
   padding: 4px;
 }
-span {
+/* span {
   font-size: 16px;
   color: black;
   font-weight: 700;
   padding-left: 5px;
+} */
 }
-}
+
+
 @media (min-width: 767px){
+  .list_div h3 {
+    font-family: system-ui;
+    font-weight: 700;
+    color: black;
+    font-size: 26px;
+    margin-left: 1px;
+    margin-top: 50px;
+  }
   .list_div {
     padding-left: 60px;
     color: black;
-    font-family: 'circular';
-    font-weight: 700;
-    width: fit-content;
-  
+    font-size: 15px;
+    font-family: system-ui;
+    font-weight: 400;
   }
   .list_div li{
     padding: 4px;
   }
-  span {
-    font-size: 16px;
-    color: black;
-    font-weight: 700;
-    padding-left: 60px;
   }
-  }
+
+
 @media (max-width:768px){
-  /* moblie view  updated on 05/06/2024 */
   .hotel-gallery {
     display: flex;
     flex-direction: column;
@@ -4358,7 +4365,6 @@ span {
     height: auto;
     gap: 20px;
   }
-  
   
   .gallery_item {
     margin-bottom: 30px;
@@ -4684,6 +4690,14 @@ span {
     margin-bottom: 10px;
     border-radius: 10px;
     height: 35%;
+  }
+  span.txt_roomtype {
+    font-size: 25px;
+    margin-top: 20px;
+    color: black;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
   }
 }
 
@@ -5252,11 +5266,12 @@ button.view-map {
   }
 
   h1.Location {
-    margin-left: 60px;
-    color: black;
-    font-family: system-ui;
-    font-weight: 500;
-    font-size: 30px;
+   margin-top: 50px;
+   color: black;
+   font-family: system-ui;
+   font-size: 26px;
+   margin-left: 60px;
+   font-weight: 700;
   }
 
   .non-refundable {
@@ -5274,7 +5289,15 @@ button.view-map {
       border-radius: 9px;
       /* object-fit: cover; */
   }
+  span.txt_roomtype {
+    font-size: 20px;
+    margin-top: 50px;
+    color: black;
+    margin-left: 60px;
+    font-weight: 600;
+  }
 }
+
 
 
 
@@ -5359,3 +5382,115 @@ button.view-map {
 /* updated on */
 
 
+/*-------------------room--details--start --------------------- */
+
+@media (min-width:767px) { 
+  .room_card {
+    display: flex;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 75%;
+    height: 300px;
+    /* max-width: 800px; */
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    flex-direction: row;
+    margin-bottom: 10px;
+    margin-left: 250px;
+    margin-right: 250px;
+  }
+
+  .room_card-image {
+      width: 75%;
+      object-fit: cover;
+  }
+  .room_main{
+      margin-bottom: 10px;
+  }
+  .room_card-content {
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 60%;
+  }
+  .room_card-content h2 {
+    margin: 0 0 10px;
+    font-size: 20px;
+    color: black;
+    font-weight: 600;
+  }
+
+  ul.room_details {
+    list-style-type: none;
+    font-size: 15px;
+    font-family: system-ui;
+    font-weight: 500;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .room_details li {
+    margin-bottom: 17px;
+    color: black;
+  }
+}
+
+
+@media (max-width:768px) {
+  .room_card {
+    display: flex;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    width: 100%;
+    max-width: 800px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    flex-direction: row;
+    margin-bottom: 10px;
+  }
+
+
+  .room_card-image {
+    width: 100%;
+    height: 25vh;
+    object-fit: cover;
+  }
+  .room_card {
+    display: flex;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+    margin-bottom: 10px;
+  }
+  .room_card-content h2 {
+    margin: 0 15px 10px;
+    font-size: 20px;
+    color: black;
+  }
+  
+  .room_card-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
+  ul.room_details {
+    font-size: 15px;
+    font-family: system-ui;
+    font-weight: 500;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
+  .room_details li {
+    margin-bottom: 10px;
+    color: black;
+  }
+}
+
+/* ------------hotet--details--end----------- */
