--- a/templates/success.html
+++ b/templates/success.html
@@ -51,4 +51,4 @@
         <h1>Thank You!</h1>
         <p>Your enquiry has been submitted successfully. We will be in touch with you soon.</p>
         <a href="{% url 'contact' %}">Back to Contact</a>
-    </
+    </div>
