--- a/templates/contact.html
+++ b/templates/contact.html
@@ -108,6 +108,7 @@
                             </div>
                         </div>
                     </div>
+			 <h4 class="txt_cnct">Connect with Us</h4>
                     <div class="col-md-9">
                         <form method="post" action="/enquiry/" class="row contact_form">
                               {% csrf_token %}
