--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5393,21 +5393,20 @@ button.view-map {
 /*-------------------room--details--start --------------------- */
 
 @media (min-width:767px) { 
-  .room_card {
-    display: flex;
-    border: 1px solid #ddd;
-    background-color: #fff;
-    border-radius: 8px;
-    overflow: hidden;
-    width: 75%;
-    height: 300px;
-    /* max-width: 800px; */
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    flex-direction: row;
-    margin-bottom: 10px;
-    margin-left: 250px;
-    margin-right: 250px;
-  }
+    .room_card {
+        display: flex;
+        border: 1px solid #ddd;
+        background-color: #fff;
+        border-radius: 8px;
+        overflow: hidden;
+        width: 75%;
+        height: 300px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        flex-direction: row;
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
   .room_card-image {
       width: 75%;
