--- a/templates/voucher_index.html
+++ b/templates/voucher_index.html
@@ -52,7 +52,7 @@
 <body>
     <h1>Create Voucher</h1>
     <div class="button-container">
-        <img src="{% static 'varkala_logo.png' %}" alt="logo" class="logo">
+        <img src="{% static '/image/varkala_logo.png' %}" alt="logo" class="logo">
         <a href="{% url 'create_hotel_voucher' %}?booking_reference={{ booking_reference }}">Create Voucher</a>
     </div>
 </body>
